styles.css
@import url('https://fonts.googleapis.com/css2?family=Manrope&display=swap');
:root{
    --light-cyan :hsl(193, 38%, 86%);
    --neon-green :hsl(150, 100%, 66%);
    --grayish-blue: hsl(217, 19%, 38%);
    --dark-grayish-blue: hsl(217, 19%, 24%);
    --dark-blue: hsl(218,23%,16%);
}
*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: 'Manrope', sans-serif;
    font-weight: 800;
}
body{
    font-size: 20px;
    padding: 0 20px;
    font-family: Arial, Helvetica, sans-serif;
    text-align: center;
    margin: 0 auto;
    max-width: 800px;
    background: var(--dark-blue);
    display:flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    height: 80vh;
    
}
h1{
    visibility: hidden;
}
p{
    visibility: hidden;
}
.main-container{
    display:flex;
    align-items: center;
    justify-content: center;
    width: 500px;
    height: 300px;
    position: relative;
    border-radius: 25px;
    
}
.text-container{
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: center;
    background: var(--dark-grayish-blue);
    height: 100%;
    border-radius: 25px;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}
#quoteNum{
    color: var(--neon-green);

}
.text-container div{
    color: var(--light-cyan);
    font-size: 28px;
    font-weight: 600;
    padding: 30px;
}
.text-container div::before{
    content: '"';
}
.text-container div::after{
    content: '"';
}
.text-container img{
    padding: 0px 30px;
    height: 15px;
    margin-bottom: 20px;
}
.main-container > button{
    display: flex;
    align-items: center;
    justify-content: center;
    height: 60px;
    width: 60px;
    background: var(--neon-green);
    padding: 10px;
    cursor: pointer;
    border-radius: 50%;
    margin-top: 30px;
    position: absolute;
    bottom: -25px;
    border: none;
    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
}
.main-container > button:hover{
    border-color: var(--neon-green);
    box-shadow: var(--neon-green) 0px 0px 40px;
}
.main-container button img{
    height: 22px;
}

